<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <DropDownPreference
        android:entries="@array/temperature_units"
        android:entryValues="@array/temperature_units"
        android:key="temperature unit"
        android:title="@string/temperature"
        app:useSimpleSummaryProvider="true" />

    <DropDownPreference
        android:entries="@array/time_format"
        android:entryValues="@array/time_format_values"
        android:key="time format"
        android:title="@string/time_format"
        app:useSimpleSummaryProvider="true" />


    <DropDownPreference
        android:entries="@array/location_service"
        android:entryValues="@array/location_service_boolean"
        android:key="is auto"
        android:title="@string/obtaining_location_method"
        app:useSimpleSummaryProvider="true" />

    <EditTextPreference
        android:key="location city"
        android:summary="@string/summary_current_location"
        android:title="@string/title_current_location"
        app:useSimpleSummaryProvider="true" />

</PreferenceScreen>
