<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_cl"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".fragments.MainFragment">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/iv_weather"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintBottom_toTopOf="@id/tv_temperature"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/tv_temperature"
        style="@style/Widget.AppCompat.TextView.H1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/tv_day_and_time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_weather" />

    <TextView
        android:id="@+id/tv_day_and_time"
        style="@style/Widget.AppCompat.TextView.H2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_temperature" />

    <TextView
        android:id="@+id/tv_title_pressure"
        style="@style/Widget.AppCompat.TextView.H3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/pressure"
        android:visibility="gone"
        app:layout_constraintEnd_toStartOf="@id/tv_title_wind"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_day_and_time" />

    <TextView
        android:id="@+id/tv_title_wind"
        style="@style/Widget.AppCompat.TextView.H3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/wind"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_title_pressure"
        app:layout_constraintTop_toTopOf="@id/tv_title_pressure" />


    <TextView
        android:id="@+id/tv_pressure"
        style="@style/Widget.AppCompat.TextView.CenteredWithPaddings"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@id/tv_title_wind"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title_pressure" />

    <TextView
        android:id="@+id/tv_wind"
        style="@style/Widget.AppCompat.TextView.CenteredWithPaddings"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_pressure"
        app:layout_constraintTop_toTopOf="@id/tv_pressure" />

    <TextView
        android:id="@+id/tv_title_humidity"
        style="@style/Widget.AppCompat.TextView.H3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/humidity"
        android:visibility="gone"
        app:layout_constraintEnd_toStartOf="@id/tv_title_visibility"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_pressure" />

    <TextView
        android:id="@+id/tv_title_visibility"
        style="@style/Widget.AppCompat.TextView.H3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/visibility"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_title_humidity"
        app:layout_constraintTop_toTopOf="@id/tv_title_humidity" />

    <TextView
        android:id="@+id/tv_humidity"
        style="@style/Widget.AppCompat.TextView.CenteredWithPaddings"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@id/tv_title_visibility"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title_humidity" />

    <TextView
        android:id="@+id/tv_visibility"
        style="@style/Widget.AppCompat.TextView.CenteredWithPaddings"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_humidity"
        app:layout_constraintTop_toTopOf="@id/tv_humidity" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_weather"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="horizontal"
        android:visibility="gone"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_humidity"
        tools:listitem="@layout/rvitem_weather" />

    <androidx.core.widget.ContentLoadingProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
